[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Entities/SearchableArea/SearchableArea.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/ProgressWheel/ProgressWheel.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="SearchableArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ProgressWheel" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 8, 8 )
value = 100.0
fill_time = 3.7

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -54.0
margin_top = -28.0
margin_right = 55.0
margin_bottom = -14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Press E to search"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="body_entered" from="." to="." method="_on_SearchableArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SearchableArea_body_exited"]
[connection signal="on_progress_complete" from="ProgressWheel" to="." method="_on_ProgressWheel_on_progress_complete"]
